<resources>
    <string name="app_name">Foody</string>
    <string-array name="sortByInputValues">
        <item>real_distance</item>
        <item>cost</item>
        <item>rating</item>
    </string-array>
    <string-array name="sortOrderInputValues">
        <item>asc</item>
        <item>desc</item>
    </string-array>
    <string name="restaurantImage">Restaurant Image</string>
    <string name="restaurantDetails">Details</string>
    <string name="restaurantDirections">Directions</string>
    <string name="admobId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ratingLabel">Rating:&#160;</string>
    <string name="votesLabel">&#160;Votes</string>
    <string name="parcelableRestaurant">restaurant</string>
    <string name="parcelableUserRating">userRating</string>
    <string name="parcelableLocation">location</string>
    <string name="comma">,&#160;</string>
    <string name="hyphen">&#160;-&#160;</string>
    <string name="nearbyTitle">Nearby</string>
    <string name="favoritesTitle">Favorites</string>
    <string name="cuisinesLabel">Cuisines:&#160;</string>
    <string name="averageCostForTwoLabel">Average cost for two:&#160;</string>
    <string name="comma1">,</string>
    <string name="userRatingLabel">User Rating:&#160;</string>
    <string name="votesLabel1">Votes:&#160;</string>
    <string name="noMoreDetailsToast">No more details found</string>
    <string name="googleMapsIntentURL">http://maps.google.com/maps?daddr=</string>
    <string name="activeTabIntent">activeTab</string>
    <string name="latitudeIntent">latitude</string>
    <string name="longitudeIntent">longitude</string>
    <string name="sharedPreferencesName">foody</string>
    <string name="spCuisineIds">cuisineIds</string>
    <string name="none">none</string>
    <string name="noPreferencesAvailableToast">No preferences available</string>
    <string name="unableToLoadCuisinesToast">Unable to load cuisines</string>
    <string name="mobileNetworkNotAvailableToast">Mobile network not available</string>
    <string name="cuisinePreferenceAppliedToast">Cuisine Preference Applied</string>
    <string name="alreadyUsingCurrentLocationToast">Already using current location</string>
    <string name="spRadius">radius</string>
    <string name="spSortBy">sortBy</string>
    <string name="spSortOrder">sortOrder</string>
    <string name="spRadiusDefaultValue">100</string>
    <string name="sisUseCurrentLocation">useCurrentLocation</string>
    <string name="parcelableRestaurantArrayList">restaurantArrayList</string>
    <string name="fragment1Name">fragment1</string>
    <string name="fragment2Name">fragment2</string>
    <string name="unableToGetRestaurantsToast">Unable to get restaurants</string>

    <string name="cuisinePreferences">Cuisine Preferences</string>
    <string name="applyPreferences">Apply Preferences</string>
    <string name="searchRadiusLabel">Search Radius (in m)</string>
    <string name="sortByLabel">Sort By</string>
    <string name="sortOrderLabel">Sort Order</string>
    <string name="save">Save</string>
    <string name="favoriteRestaurantsWidgetLabel">Favorite Restaurants</string>
    <string name="restaurantAddressHint">Restaurant Address</string>
    <string name="cuisinesHint">Cuisines</string>
    <string name="averageCostForTwoHint">Average Cost for two</string>
    <string name="aggregateRatingHint">Aggregate Rating</string>
    <string name="numberOfVotesHint">Number of Votes</string>
    <string name="details">Details</string>
    <string name="directions">Directions</string>
    <string name="restaurantNameHint">Restaurant Name</string>
    <string name="ratingHint">Rating</string>
    <string name="votesHint">Votes</string>
    <string name="menuBookmark">Bookmark</string>
    <string name="menuChangeLocation">Change Location</string>
    <string name="menuCurrentLocation">Use Current Location</string>
    <string name="menuCuisinePreference">Set Cuisine Preference</string>
    <string name="menuSettings">Settings</string>
</resources>